[package]
name = "scrypto_math"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Math library extending Radix Scrypto with more advanced mathematical operations"
repository = "https://github.com/ociswap/scrypto-math"

[dependencies]
utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2", version = "1.1.2" }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2", version = "1.1.2" }
radix-engine-macros = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2", version = "1.1.2" }
num-traits = "0.2.19"
pretty_assertions = "1.4.0"
