[package]
name = "scrypto_math"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Math library extending Radix Scrypto with more advanced mathematical operations"
repository = "https://github.com/ociswap/scrypto-math"

[dependencies]
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
radix-common-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-9396c507" }
num-traits = "0.2.19"
pretty_assertions = "1.4.0"
