[package]
name = "scrypto_math"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Math library extending Radix Scrypto with more advanced mathematical operations"
repository = "https://github.com/ociswap/scrypto-math"

[dependencies]
radix-rust = "1.2.0"
radix-common = "1.2.0"
radix-common-derive = "1.2.0"
num-traits = "0.2.19"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3"
