[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scryptomath"
version = "0.0.2"
description = "Math library to support writing Python tests for Scrypto blueprints"
readme = "README.md"
authors = [{ name = "Ociswap", email = "dev@ociswap.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["scrypto", "math"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ociswap/scrypto-math"

[tool.setuptools]
py-modules = ["scryptomath"]
