[package]
name = "advanced-math"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
# scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.7.0" }
scrypto_math = { path = "../../" }

[dev-dependencies]
radix-transactions = "1.2.0"
radix-common = "1.2.0"
scrypto-test = "1.2.0"

[profile.release]
opt-level = 's'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip debug info.
overflow-checks = true # Panic in the case of an overflow.

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace